Under Construction Page
Added an under construction page to let visitors know the site is not
ready for viewing.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<body>
-		<h1>Hello World</h1>
-		<p>I'm hosted with GitHub Pages.</p>
+            <img src="images/under_construction.png" alt="Under construction image.">
+            <h1>Web site under construction</h1>
+            <h3>
+                Thanks for stopping by early. <br>
+                Please be sure to check my site out again later!
+            </h3>
 	</body>
 </html>
