--- a/index.html
+++ b/index.html
@@ -1,31 +1,3 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Web Site Under Construction | Brycon Carpenter Personal Portfolio</title>
-        <style>
-            #construction_image {
-                height: 400px;
-                width: 400px;
-            }
-            
-            #main {
-                text-align: center;
-            }
-        </style>
-    </head>
-    <body>
-        <div id="main">
-            <img src="images/under_construction.png" alt="Under construction image." id="construction_image">
-            <h1>
-                <img src="images/cone.png" alt="Construction cone image.">
-                Web site under construction
-                <img src="images/cone.png" alt="Construction cone image.">
-            </h1>
-            <h3>
-                Thanks for stopping by early. <br>
-                Please be sure to check my site out again later! <br><br>
-                ~Brycon Carpenter
-            </h3>
-        </div>
-    </body>
-</html>
+---
+layout: front
+---
